--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "ecmaVersion": 2018
   },
   "extends": [
+    "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "plugin:react/recommended"
   ],
