Add types for some components

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "@typescript-eslint/explicit-module-boundary-types": 0,
     "react/prop-types": 0
   },
   "env": {
